Fix y-scrollbar disabled issue in table view

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -637,10 +637,6 @@ img.preview {
   max-width: 28em;
 }
 
-/* #download-options-container {
-    height: 80% !important;
-} */
-
 #download_links {
   display: none;
 }
